--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  <form action="/mysite/submit.php" method="POST">
+  <form action="/thankyou.php" method="POST">
     <input name="email" placeholder="Email"><br>
     <input name="name" placeholder="Имя"><br>
     <input name="phone" placeholder="Телефон"><br>
